batch file to build
