# swagger_server/controllers/seances_controller.py
@@ -4,7 +4,20 @@ import six
 from swagger_server import util
 
 
-def cours_seances_id_delete(id):  # noqa: E501
+def cours_id_seances_get(id):  # noqa: E501
+    """Retourne la liste des séances
+
+     # noqa: E501
+
+    :param id: 
+    :type id: int
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def cours_id_seances_id_seance_delete(id):  # noqa: E501
     """Supprime une séance
 
      # noqa: E501
@@ -17,20 +30,22 @@ def cours_seances_id_delete(id):  # noqa: E501
     return 'do some magic!'
 
 
-def cours_seances_id_get(id):  # noqa: E501
+def cours_id_seances_id_seance_get(id, idSeance):  # noqa: E501
     """Retourne les infos sur la séance
 
      # noqa: E501
 
     :param id: 
     :type id: int
+    :param idSeance: 
+    :type idSeance: int
 
     :rtype: None
     """
     return 'do some magic!'
 
 
-def cours_seances_id_post(id):  # noqa: E501
+def cours_id_seances_id_seance_post(id):  # noqa: E501
     """Crée une nouvelle séance
 
      # noqa: E501
